--- a/package.json
+++ b/package.json
@@ -53,8 +53,13 @@
     "@angular/platform-browser": "16.1.3",
     "@angular/platform-browser-dynamic": "16.1.3",
     "@angular/router": "16.1.3",
+    "csv": "6.3.5",
+    "modbus-serial": "8.0.13",
+    "read-excel-file": "5.7.1",
+    "read-last-lines": "1.8.0",
     "rxjs": "7.8.1",
     "tslib": "^2.5.0",
+    "xlsx": "0.18.5",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
